[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/fonts/Roboto/Roboto-Regular.ttf" type="FontFile" id=1]
[ext_resource path="res://systems/map_system/ui_elements/map_element_inspector/scripts/PinTags.gd" type="Script" id=2]
[ext_resource path="res://systems/map_system/ui_elements/map_element_inspector/scripts/PinPosition.gd" type="Script" id=3]
[ext_resource path="res://systems/map_system/ui_elements/map_element_inspector/scripts/PinArticle.gd" type="Script" id=4]
[ext_resource path="res://systems/map_system/ui_elements/map_element_inspector/scripts/MapPinInspector.gd" type="Script" id=5]
[ext_resource path="res://systems/map_system/ui_elements/map_element_inspector/scripts/PinTemplate.gd" type="Script" id=6]
[ext_resource path="res://systems/map_system/ui_elements/map_element_inspector/scripts/PinName.gd" type="Script" id=7]
[ext_resource path="res://systems/map_system/ui_elements/map_element_inspector/scripts/DeletePin.gd" type="Script" id=8]
[ext_resource path="res://systems/map_system/ui_elements/map_element_inspector/scripts/LinkMap.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.219608, 0.564706, 0.886275, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.203922, 0.203922, 0.203922, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.219608, 0.564706, 0.886275, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.219608, 0.564706, 0.886275, 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )
border_width_bottom = 2
border_color = Color( 0.219608, 0.564706, 0.886275, 1 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.219608, 0.564706, 0.886275, 1 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 0.219608, 0.564706, 0.886275, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.219608, 0.564706, 0.886275, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=16]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )
border_width_bottom = 2
border_color = Color( 0.219608, 0.564706, 0.886275, 1 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="FontFile" id=1]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Button/styles/focus = SubResource( 15 )
Button/styles/hover = SubResource( 17 )
Button/styles/normal = SubResource( 13 )
Button/styles/pressed = SubResource( 14 )
LineEdit/styles/focus = SubResource( 3 )
LineEdit/styles/normal = SubResource( 4 )
OptionButton/styles/focus = SubResource( 8 )
OptionButton/styles/hover = SubResource( 9 )
OptionButton/styles/normal = SubResource( 10 )
OptionButton/styles/pressed = SubResource( 11 )
Panel/styles/panel = SubResource( 12 )
PopupMenu/styles/panel = SubResource( 16 )
TextEdit/styles/focus = SubResource( 7 )
TextEdit/styles/normal = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.980392, 0.317647, 0.317647, 1 )

[sub_resource type="Theme" id=19]

[node name="ScrollContainer" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="MapPinInspector" type="Control" parent="."]
offset_right = 1920.0
offset_bottom = 750.0
custom_minimum_size = Vector2( 0, 750 )
size_flags_horizontal = 3
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MapPinInspector"]
anchor_left = 0.0108696
anchor_right = 0.98913
anchor_bottom = 0.815152
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="MapPinInspector/VBoxContainer"]
offset_right = 1878.0
offset_bottom = 25.0
custom_minimum_size = Vector2( 0, 25 )

[node name="PinInspector" type="Label" parent="MapPinInspector/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2( 0, 25 )
text = "Pin Inspector"
align = 1
valign = 1

[node name="PinName" type="Control" parent="MapPinInspector/VBoxContainer"]
offset_top = 50.0
offset_right = 1878.0
offset_bottom = 75.0
custom_minimum_size = Vector2( 0, 25 )
script = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="MapPinInspector/VBoxContainer/PinName"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="MapPinInspector/VBoxContainer/PinName/HBoxContainer"]
offset_top = 3.0
offset_right = 125.0
offset_bottom = 22.0
custom_minimum_size = Vector2( 125, 0 )
text = "Pin Name"

[node name="LineEdit" type="LineEdit" parent="MapPinInspector/VBoxContainer/PinName/HBoxContainer"]
offset_left = 129.0
offset_right = 1878.0
offset_bottom = 25.0
size_flags_horizontal = 3

[node name="PinPosition" type="Control" parent="MapPinInspector/VBoxContainer"]
offset_top = 100.0
offset_right = 1878.0
offset_bottom = 170.0
custom_minimum_size = Vector2( 0, 70 )
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="MapPinInspector/VBoxContainer/PinPosition"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="MapPinInspector/VBoxContainer/PinPosition/HBoxContainer"]
offset_right = 125.0
offset_bottom = 70.0
custom_minimum_size = Vector2( 125, 0 )
size_flags_vertical = 7
text = "Pin Position"

[node name="HBoxContainer" type="VBoxContainer" parent="MapPinInspector/VBoxContainer/PinPosition/HBoxContainer"]
offset_left = 129.0
offset_right = 238.0
offset_bottom = 70.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MapPinInspector/VBoxContainer/PinPosition/HBoxContainer/HBoxContainer"]
offset_right = 109.0
offset_bottom = 25.0
custom_minimum_size = Vector2( 0, 25 )
custom_constants/separation = 15

[node name="Label" type="Label" parent="MapPinInspector/VBoxContainer/PinPosition/HBoxContainer/HBoxContainer/HBoxContainer"]
offset_top = 3.0
offset_right = 10.0
offset_bottom = 22.0
custom_minimum_size = Vector2( 10, 0 )
text = "x"

[node name="SpinBox" type="SpinBox" parent="MapPinInspector/VBoxContainer/PinPosition/HBoxContainer/HBoxContainer/HBoxContainer"]
offset_left = 25.0
offset_right = 109.0
offset_bottom = 25.0
min_value = -100000.0
max_value = 100000.0
align = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MapPinInspector/VBoxContainer/PinPosition/HBoxContainer/HBoxContainer"]
offset_top = 45.0
offset_right = 109.0
offset_bottom = 70.0
custom_minimum_size = Vector2( 0, 25 )
custom_constants/separation = 15

[node name="Label2" type="Label" parent="MapPinInspector/VBoxContainer/PinPosition/HBoxContainer/HBoxContainer/HBoxContainer2"]
offset_top = 3.0
offset_right = 10.0
offset_bottom = 22.0
custom_minimum_size = Vector2( 10, 0 )
text = "y"

[node name="SpinBox2" type="SpinBox" parent="MapPinInspector/VBoxContainer/PinPosition/HBoxContainer/HBoxContainer/HBoxContainer2"]
offset_left = 25.0
offset_right = 109.0
offset_bottom = 25.0
min_value = -100000.0
max_value = 100000.0
align = 2

[node name="PinTemplate" type="Control" parent="MapPinInspector/VBoxContainer"]
offset_top = 195.0
offset_right = 1878.0
offset_bottom = 220.0
custom_minimum_size = Vector2( 0, 25 )
pivot_offset = Vector2( -373.999, 55 )
script = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="MapPinInspector/VBoxContainer/PinTemplate"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="MapPinInspector/VBoxContainer/PinTemplate/HBoxContainer"]
offset_top = 3.0
offset_right = 125.0
offset_bottom = 22.0
custom_minimum_size = Vector2( 125, 0 )
text = "Pin Template"

[node name="OptionButton" type="OptionButton" parent="MapPinInspector/VBoxContainer/PinTemplate/HBoxContainer"]
offset_left = 129.0
offset_right = 1878.0
offset_bottom = 25.0
size_flags_horizontal = 3

[node name="PinTexture" type="Control" parent="MapPinInspector/VBoxContainer"]
offset_top = 245.0
offset_right = 1878.0
offset_bottom = 445.0
custom_minimum_size = Vector2( 0, 200 )

[node name="VBoxContainer" type="VBoxContainer" parent="MapPinInspector/VBoxContainer/PinTexture"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MapPinInspector/VBoxContainer/PinTexture/VBoxContainer"]
offset_right = 1878.0
offset_bottom = 25.0

[node name="Label" type="Label" parent="MapPinInspector/VBoxContainer/PinTexture/VBoxContainer/HBoxContainer"]
offset_top = 3.0
offset_right = 125.0
offset_bottom = 22.0
custom_minimum_size = Vector2( 125, 0 )
text = "Display Image"

[node name="Button" type="Button" parent="MapPinInspector/VBoxContainer/PinTexture/VBoxContainer/HBoxContainer"]
offset_left = 1803.0
offset_right = 1878.0
offset_bottom = 25.0
custom_minimum_size = Vector2( 75, 25 )
size_flags_horizontal = 10
text = "new"

[node name="Panel" type="Panel" parent="MapPinInspector/VBoxContainer/PinTexture/VBoxContainer"]
offset_top = 35.0
offset_right = 1878.0
offset_bottom = 200.0
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="MapPinInspector/VBoxContainer/PinTexture/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
expand = true
stretch_mode = 4

[node name="PinArticle" type="Control" parent="MapPinInspector/VBoxContainer"]
offset_top = 470.0
offset_right = 1878.0
offset_bottom = 495.0
custom_minimum_size = Vector2( 0, 25 )
pivot_offset = Vector2( -373.999, 55 )
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="MapPinInspector/VBoxContainer/PinArticle"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="MapPinInspector/VBoxContainer/PinArticle/HBoxContainer"]
offset_top = 3.0
offset_right = 125.0
offset_bottom = 22.0
custom_minimum_size = Vector2( 125, 0 )
text = "Pin Article"

[node name="OptionButton" type="LineEdit" parent="MapPinInspector/VBoxContainer/PinArticle/HBoxContainer"]
offset_left = 129.0
offset_right = 1878.0
offset_bottom = 25.0
size_flags_horizontal = 3

[node name="CreateArticle" type="Control" parent="MapPinInspector/VBoxContainer"]
offset_top = 520.0
offset_right = 1878.0
offset_bottom = 545.0
custom_minimum_size = Vector2( 0, 25 )
pivot_offset = Vector2( -373.999, 55 )

[node name="HBoxContainer" type="HBoxContainer" parent="MapPinInspector/VBoxContainer/CreateArticle"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NewArticle" type="Button" parent="MapPinInspector/VBoxContainer/CreateArticle/HBoxContainer"]
offset_left = 1803.0
offset_right = 1878.0
offset_bottom = 25.0
custom_minimum_size = Vector2( 75, 25 )
size_flags_horizontal = 10
text = "new "

[node name="LinkMap" type="Control" parent="MapPinInspector/VBoxContainer"]
offset_top = 570.0
offset_right = 1878.0
offset_bottom = 595.0
custom_minimum_size = Vector2( 0, 25 )
pivot_offset = Vector2( -373.999, 55 )
script = ExtResource( 9 )

[node name="HBoxContainer" type="HBoxContainer" parent="MapPinInspector/VBoxContainer/LinkMap"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="MapPinInspector/VBoxContainer/LinkMap/HBoxContainer"]
offset_top = 3.0
offset_right = 125.0
offset_bottom = 22.0
custom_minimum_size = Vector2( 125, 0 )
text = "Link Map"

[node name="OptionButton" type="OptionButton" parent="MapPinInspector/VBoxContainer/LinkMap/HBoxContainer"]
offset_left = 129.0
offset_right = 1878.0
offset_bottom = 25.0
size_flags_horizontal = 3

[node name="PinTags" type="Control" parent="MapPinInspector/VBoxContainer"]
offset_top = 620.0
offset_right = 1878.0
offset_bottom = 645.0
custom_minimum_size = Vector2( 0, 25 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="MapPinInspector/VBoxContainer/PinTags"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="MapPinInspector/VBoxContainer/PinTags/HBoxContainer"]
offset_top = 3.0
offset_right = 125.0
offset_bottom = 22.0
custom_minimum_size = Vector2( 125, 0 )
text = "Pin Tags"

[node name="LineEdit" type="LineEdit" parent="MapPinInspector/VBoxContainer/PinTags/HBoxContainer"]
offset_left = 129.0
offset_right = 1878.0
offset_bottom = 25.0
size_flags_horizontal = 3
placeholder_text = "eg: house, cat"

[node name="HSeparator" type="HSeparator" parent="MapPinInspector/VBoxContainer"]
offset_top = 670.0
offset_right = 1878.0
offset_bottom = 674.0

[node name="DeletePin" type="Control" parent="MapPinInspector/VBoxContainer"]
offset_top = 699.0
offset_right = 1878.0
offset_bottom = 724.0
custom_minimum_size = Vector2( 0, 25 )
pivot_offset = Vector2( -373.999, 55 )
script = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="MapPinInspector/VBoxContainer/DeletePin"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="MapPinInspector/VBoxContainer/DeletePin/HBoxContainer"]
offset_top = 3.0
offset_right = 125.0
offset_bottom = 22.0
custom_minimum_size = Vector2( 125, 0 )
text = "Delete Pin"

[node name="DeletePinButton" type="Button" parent="MapPinInspector/VBoxContainer/DeletePin/HBoxContainer"]
offset_left = 129.0
offset_right = 1878.0
offset_bottom = 25.0
size_flags_horizontal = 3
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 18 )
text = "delete"

[node name="FileDialog" type="FileDialog" parent="MapPinInspector"]
offset_left = 262.0
offset_top = 89.0
offset_right = 721.0
offset_bottom = 521.0
theme = SubResource( 19 )
window_title = "Open a File"
mode = 0
access = 1
show_hidden_files = true
current_dir = "user://media/mayank/Assets1/Software Dev/world building software"
current_path = "user://media/mayank/Assets1/Software Dev/world building software/"

[connection signal="text_changed" from="MapPinInspector/VBoxContainer/PinName/HBoxContainer/LineEdit" to="MapPinInspector/VBoxContainer/PinName" method="_on_LineEdit_text_changed"]
[connection signal="value_changed" from="MapPinInspector/VBoxContainer/PinPosition/HBoxContainer/HBoxContainer/HBoxContainer/SpinBox" to="MapPinInspector/VBoxContainer/PinPosition" method="value_changed"]
[connection signal="value_changed" from="MapPinInspector/VBoxContainer/PinPosition/HBoxContainer/HBoxContainer/HBoxContainer2/SpinBox2" to="MapPinInspector/VBoxContainer/PinPosition" method="value_changed"]
[connection signal="item_selected" from="MapPinInspector/VBoxContainer/PinTemplate/HBoxContainer/OptionButton" to="MapPinInspector/VBoxContainer/PinTemplate" method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="MapPinInspector/VBoxContainer/PinTexture/VBoxContainer/HBoxContainer/Button" to="MapPinInspector/VBoxContainer/PinTemplate" method="_on_Button_pressed"]
[connection signal="text_changed" from="MapPinInspector/VBoxContainer/PinArticle/HBoxContainer/OptionButton" to="MapPinInspector/VBoxContainer/PinArticle" method="_on_OptionButton_text_changed"]
[connection signal="pressed" from="MapPinInspector/VBoxContainer/CreateArticle/HBoxContainer/NewArticle" to="." method="_on_NewArticle_pressed"]
[connection signal="item_selected" from="MapPinInspector/VBoxContainer/LinkMap/HBoxContainer/OptionButton" to="MapPinInspector/VBoxContainer/LinkMap" method="_on_OptionButton_item_selected"]
[connection signal="text_changed" from="MapPinInspector/VBoxContainer/PinTags/HBoxContainer/LineEdit" to="MapPinInspector/VBoxContainer/PinTags" method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="MapPinInspector/VBoxContainer/DeletePin/HBoxContainer/DeletePinButton" to="." method="_on_DeletePinButton_pressed"]
